--- a/features.html
+++ b/features.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loruki | Cloud Hosting for Everyone</title>
+    <title>Cloudbranch</title>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
@@ -12,111 +13,137 @@
 
     <!-- Navbar -->
     <div class="navbar">
-        <div class="container flex">
-            <h1 class="logo">Loruki</h1>
-            <nav>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="features.html">Features</a></li>
-                <li><a href="docs.html">Docs</a></li>
-              </ul>
-            </nav>
-        </div>
+      <div class="container flex">
+        <div class="logo-container flex">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="cloudbranch-icon">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M23.2904 12.1385C24.3772 11.5176 25.6355 11.1628 26.9767 11.1628C31.0868 11.1628 34.4186 14.4946 34.4186 18.6047C34.4186 19.9675 34.0522 21.2448 33.4126 22.3435C35.542 22.5399 37.2093 24.331 37.2093 26.5116C37.2093 28.8235 35.3351 30.6977 33.0233 30.6977C32.866 30.6977 32.7108 30.689 32.5581 30.6721V30.6977H8.83721H8.37209V30.6801C5.25002 30.4426 2.7907 27.8341 2.7907 24.6512C2.7907 22.0985 4.37252 19.9153 6.60943 19.0283C6.54499 18.5863 6.51162 18.1343 6.51162 17.6744C6.51162 12.5369 10.6764 8.3721 15.8139 8.3721C18.8777 8.3721 21.5955 9.85322 23.2904 12.1385ZM22.1761 16.0029C21.9795 16.33 21.8755 16.7056 21.8754 17.0886C21.8752 17.5207 22.0073 17.9422 22.2536 18.2951C22.4998 18.648 22.848 18.9149 23.2502 19.059V19.642C23.2502 19.8883 23.1537 20.1245 22.9817 20.2986C22.8098 20.4727 22.5767 20.5705 22.3336 20.5705H18.6673C18.3518 20.5701 18.0397 20.6359 17.7506 20.7636V19.059C18.2093 18.8946 18.5959 18.5714 18.842 18.1463C19.0882 17.7212 19.1781 17.2217 19.0958 16.7359C19.0136 16.2502 18.7645 15.8096 18.3925 15.4919C18.0206 15.1742 17.5497 15 17.0632 15C16.5768 15 16.1059 15.1742 15.7339 15.4919C15.362 15.8096 15.1128 16.2502 15.0306 16.7359C14.9483 17.2217 15.0382 17.7212 15.2844 18.1463C15.5305 18.5714 15.9171 18.8946 16.3758 19.059V23.9392C15.9169 24.1035 15.53 24.4268 15.2837 24.8521C15.0373 25.2774 14.9474 25.7772 15.0297 26.2631C15.112 26.7491 15.3612 27.19 15.7333 27.5078C16.1054 27.8257 16.5764 28 17.0632 28C17.5499 28 18.021 27.8257 18.3931 27.5078C18.7652 27.19 19.0145 26.7491 19.0968 26.2631C19.1791 25.7772 19.0891 25.2774 18.8428 24.8521C18.5964 24.4268 18.2095 24.1035 17.7506 23.9392V22.8918C17.7506 22.6456 17.8472 22.4094 18.0191 22.2353C18.191 22.0612 18.4242 21.9634 18.6673 21.9634H22.3336C22.9414 21.9634 23.5242 21.7187 23.9539 21.2834C24.3837 20.8481 24.6251 20.2577 24.6251 19.642V19.059C24.9815 18.9312 25.2964 18.7067 25.5355 18.41C25.7745 18.1133 25.9285 17.7557 25.9804 17.3764C26.0324 16.997 25.9804 16.6105 25.8302 16.2591C25.6799 15.9076 25.4372 15.6047 25.1286 15.3836C24.8199 15.1624 24.4572 15.0315 24.0801 15.0051C23.7029 14.9786 23.3257 15.0577 22.99 15.2337C22.6542 15.4097 22.3727 15.6757 22.1761 16.0029ZM16.5771 17.581C16.4482 17.4504 16.3758 17.2732 16.3758 17.0886C16.3758 16.9039 16.4482 16.7267 16.5771 16.5961C16.706 16.4655 16.8809 16.3922 17.0632 16.3922C17.2455 16.3922 17.4204 16.4655 17.5493 16.5961C17.6783 16.7267 17.7506 16.9039 17.7506 17.0886C17.7506 17.2732 17.6783 17.4504 17.5493 17.581C17.4204 17.7116 17.2455 17.785 17.0632 17.785C16.8809 17.785 16.706 17.7116 16.5771 17.581ZM23.4516 16.5961C23.5805 16.4655 23.7553 16.3922 23.9377 16.3922C24.12 16.3922 24.2949 16.4655 24.4238 16.5961C24.5526 16.7267 24.6251 16.9039 24.6251 17.0886C24.6251 17.2732 24.5526 17.4504 24.4238 17.581C24.2949 17.7116 24.12 17.785 23.9377 17.785C23.7553 17.785 23.5805 17.7116 23.4516 17.581C23.3226 17.4504 23.2502 17.2732 23.2502 17.0886C23.2502 16.9039 23.3226 16.7267 23.4516 16.5961ZM16.5771 25.4171C16.706 25.2865 16.8809 25.2132 17.0632 25.2132C17.2455 25.2132 17.4204 25.2865 17.5493 25.4171C17.6783 25.5477 17.7506 25.7248 17.7506 25.9096C17.7506 26.0942 17.6783 26.2713 17.5493 26.4019C17.4204 26.5325 17.2455 26.6059 17.0632 26.6059C16.8809 26.6059 16.706 26.5325 16.5771 26.4019C16.4482 26.2713 16.3758 26.0942 16.3758 25.9096C16.3758 25.7248 16.4482 25.5477 16.5771 25.4171Z" fill="white"/>
+          </svg>
+          <h1>cloudbranch</h1>
+        </div> 
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="features.html" class="active">Features</a></li>
+              <li><a href="docs.html">Docs</a></li>
+            </ul>
+          </nav>
+      </div>
     </div>
 
     <!-- Head -->
-    <section class="features-head bg-primary py-3">
+    <section class="features-head bg-transparent py-4">
       <div class="container grid">
         <div>
           <h1 class="xl">Features</h1>
           <p class="lead">
-            Check out the features of Loruki that separate us from the competition
+            Learn what makes cloudbranch so powerful
           </p>
 
         </div>
-        <img src="images/server.png" alt="">
+        <img src="images/cloudbranch-logo.svg" alt=""/>
       </div>
     </section>
 
-    <!-- Sub head -->
-    <section class="features-sub-head bg-light py-3">
+    <!-- Sub Head -->
+    <section class="features-sub-head bg-light py-4">
       <div class="container grid">
+        <img src="/images/cloud-illustration.svg" alt="">  
         <div>
-          <h1 class="md">The Loruki Platform</h1>
+          <h1 class="md">The Cloudbranch Platform</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur, doloribus repellendus quasi, aut corporis nam alias culpa. Nostrum, inventore accusantium!
+            Our platform empowers businesses of all sizes to thrive in the digital landscape. With a focus on performance, security, and simplicity, we offer a comprehensive suite of hosting services designed to elevate your online presence.
           </p>
         </div>
-        <img src="images/server2.png" alt="">
       </div>
     </section>
 
     <!-- Main -->
-    <section class="features-main my-2">
-      <div class="container grid grid-3">
+    <section class="features-main py-5">
+      <div class="container grid grid-2">
           <div class="card flex">
-              <i class="fas fa-server fa-3x"></i>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo saepe corrupti et dolorem voluptate at, nostrum rem voluptatem ab alias quia molestiae ea, libero nihil deserunt. Molestias, eum? Necessitatibus!</p>
+            <i class="fas fa-chart-line fa-3x text-primary"></i>
+            <div class="flex">
+              <h4>Scalable Performance</h4>
+              <p>
+                Experience unmatched performance with our scalable cloud infrastructure. Whether you're a startup or an enterprise, our hosting adapts to your needs, ensuring optimal speed and responsiveness.              </p>
+            </div>
           </div>
           <div class="card flex">
-              <i class="fas fa-network-wired fa-3x"></i>
+            <i class="fas fa-shield-alt fa-3x text-primary"></i>
+            <div class="flex">
+              <h4>Robust Security Measures</h4>
               <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                  recusandae perferendis culpa, reiciendis a itaque debitis qui vel
-                  dignissimos ipsum!
-              </p>
+                Your data's safety is our priority. Benefit from top-tier security protocols, including firewalls, regular backups, and intrusion detection, to keep your digital assets secure.              </p>
+            </div>   
           </div>
           <div class="card flex">
-              <i class="fas fa-laptop-code fa-3x"></i>
+            <i class="fas fa-globe fa-3x text-primary"></i>
+            <div class="flex">
+              <h4>Global Data Centers</h4>
               <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                  magnam.
+                Our network of data centers across different regions guarantees low-latency access and reliable uptime for your website or application
               </p>
+            </div>
           </div>
           <div class="card flex">
-              <i class="fas fa-database fa-3x"></i>
+            <i class="fas fa-laptop-code fa-3x text-primary"></i>
+            <div class="flex">
+              <h4>Intuitive Control Panel</h4>
               <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, a!
+                Take control with ease using our user-friendly control panel. Manage domains, databases, and configurations hassle-free, even if you're new to cloud hosting
               </p>
+            </div>
           </div>
           <div class="card flex">
-              <i class="fas fa-power-off fa-3x"></i>
+            <i class="fas fa-database fa-3x text-primary"></i>
+            <div class="flex">
+              <h4>Automated Backups</h4>
               <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                  magnam.
+                Our automated backup system ensures your valuable information is regularly backed up, giving you peace of mind in case of unexpected events
               </p>
+            </div>
           </div>
-          <div class="card flex">
-              <i class="fas fa-upload fa-3x"></i>
+          <div class="card flex ">
+            <i class="fas fa-question-circle fa-3x text-primary"></i>
+            <div class="flex">
+              <h4>24/7 Expert Support</h4>
               <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                  magnam.
+                Our dedicated support team is available around the clock to assist you with technical queries, troubleshooting, and guidance on optimizing your hosting setup
               </p>
+            </div>
           </div>
       </div>
   </section>
 
-    <!-- Footer -->
-    <footer class="footer bg-dark py-5">
-      <div class="container grid grid-3">
-        <div>
-          <h1>Loruki</h1>
-          <p>Copyright &copy; 2023</p>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="features.html">Features</a></li>
-            <li><a href="docs.html">Docs</a></li>
-          </ul>
-        </nav>
-        <div class="social">
+  <!-- Footer -->
+  <footer class="footer bg-dark py-5">
+    <div class="container grid grid-3">
+      <div>
+        <div class="logo-container flex">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="cloudbranch-icon">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M23.2904 12.1385C24.3772 11.5176 25.6355 11.1628 26.9767 11.1628C31.0868 11.1628 34.4186 14.4946 34.4186 18.6047C34.4186 19.9675 34.0522 21.2448 33.4126 22.3435C35.542 22.5399 37.2093 24.331 37.2093 26.5116C37.2093 28.8235 35.3351 30.6977 33.0233 30.6977C32.866 30.6977 32.7108 30.689 32.5581 30.6721V30.6977H8.83721H8.37209V30.6801C5.25002 30.4426 2.7907 27.8341 2.7907 24.6512C2.7907 22.0985 4.37252 19.9153 6.60943 19.0283C6.54499 18.5863 6.51162 18.1343 6.51162 17.6744C6.51162 12.5369 10.6764 8.3721 15.8139 8.3721C18.8777 8.3721 21.5955 9.85322 23.2904 12.1385ZM22.1761 16.0029C21.9795 16.33 21.8755 16.7056 21.8754 17.0886C21.8752 17.5207 22.0073 17.9422 22.2536 18.2951C22.4998 18.648 22.848 18.9149 23.2502 19.059V19.642C23.2502 19.8883 23.1537 20.1245 22.9817 20.2986C22.8098 20.4727 22.5767 20.5705 22.3336 20.5705H18.6673C18.3518 20.5701 18.0397 20.6359 17.7506 20.7636V19.059C18.2093 18.8946 18.5959 18.5714 18.842 18.1463C19.0882 17.7212 19.1781 17.2217 19.0958 16.7359C19.0136 16.2502 18.7645 15.8096 18.3925 15.4919C18.0206 15.1742 17.5497 15 17.0632 15C16.5768 15 16.1059 15.1742 15.7339 15.4919C15.362 15.8096 15.1128 16.2502 15.0306 16.7359C14.9483 17.2217 15.0382 17.7212 15.2844 18.1463C15.5305 18.5714 15.9171 18.8946 16.3758 19.059V23.9392C15.9169 24.1035 15.53 24.4268 15.2837 24.8521C15.0373 25.2774 14.9474 25.7772 15.0297 26.2631C15.112 26.7491 15.3612 27.19 15.7333 27.5078C16.1054 27.8257 16.5764 28 17.0632 28C17.5499 28 18.021 27.8257 18.3931 27.5078C18.7652 27.19 19.0145 26.7491 19.0968 26.2631C19.1791 25.7772 19.0891 25.2774 18.8428 24.8521C18.5964 24.4268 18.2095 24.1035 17.7506 23.9392V22.8918C17.7506 22.6456 17.8472 22.4094 18.0191 22.2353C18.191 22.0612 18.4242 21.9634 18.6673 21.9634H22.3336C22.9414 21.9634 23.5242 21.7187 23.9539 21.2834C24.3837 20.8481 24.6251 20.2577 24.6251 19.642V19.059C24.9815 18.9312 25.2964 18.7067 25.5355 18.41C25.7745 18.1133 25.9285 17.7557 25.9804 17.3764C26.0324 16.997 25.9804 16.6105 25.8302 16.2591C25.6799 15.9076 25.4372 15.6047 25.1286 15.3836C24.8199 15.1624 24.4572 15.0315 24.0801 15.0051C23.7029 14.9786 23.3257 15.0577 22.99 15.2337C22.6542 15.4097 22.3727 15.6757 22.1761 16.0029ZM16.5771 17.581C16.4482 17.4504 16.3758 17.2732 16.3758 17.0886C16.3758 16.9039 16.4482 16.7267 16.5771 16.5961C16.706 16.4655 16.8809 16.3922 17.0632 16.3922C17.2455 16.3922 17.4204 16.4655 17.5493 16.5961C17.6783 16.7267 17.7506 16.9039 17.7506 17.0886C17.7506 17.2732 17.6783 17.4504 17.5493 17.581C17.4204 17.7116 17.2455 17.785 17.0632 17.785C16.8809 17.785 16.706 17.7116 16.5771 17.581ZM23.4516 16.5961C23.5805 16.4655 23.7553 16.3922 23.9377 16.3922C24.12 16.3922 24.2949 16.4655 24.4238 16.5961C24.5526 16.7267 24.6251 16.9039 24.6251 17.0886C24.6251 17.2732 24.5526 17.4504 24.4238 17.581C24.2949 17.7116 24.12 17.785 23.9377 17.785C23.7553 17.785 23.5805 17.7116 23.4516 17.581C23.3226 17.4504 23.2502 17.2732 23.2502 17.0886C23.2502 16.9039 23.3226 16.7267 23.4516 16.5961ZM16.5771 25.4171C16.706 25.2865 16.8809 25.2132 17.0632 25.2132C17.2455 25.2132 17.4204 25.2865 17.5493 25.4171C17.6783 25.5477 17.7506 25.7248 17.7506 25.9096C17.7506 26.0942 17.6783 26.2713 17.5493 26.4019C17.4204 26.5325 17.2455 26.6059 17.0632 26.6059C16.8809 26.6059 16.706 26.5325 16.5771 26.4019C16.4482 26.2713 16.3758 26.0942 16.3758 25.9096C16.3758 25.7248 16.4482 25.5477 16.5771 25.4171Z" fill="white"/>
+          </svg>
+          <h1>cloudbranch</h1>
+        </div> 
+        <p>Copyright &copy; 2023</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="features.html">Features</a></li>
+          <li><a href="docs.html">Docs</a></li>
+        </ul>
+      </nav>
+      <div class="flex-column">
+        <div class="social py-2">
           <a href="#"><i class="fab fa-github fa-2x"></i></a>
           <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
           <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
           <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
+        <p>Built by <a href="#" class="text-primary">Evergreen Web Designs</a></p>
       </div>
-    </footer>
+    </div>
+  </footer>
 </body>
 </html>
