fix favicon and improve mobile design

--- a/docs.html
+++ b/docs.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docs</title>
+    <title>Docs | CloudBranch</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
@@ -15,10 +22,10 @@
     <div class="navbar">
       <div class="container flex">
         <div class="logo-container flex">
-          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="cloudbranch-icon">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="CloudBranch-icon">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M23.2904 12.1385C24.3772 11.5176 25.6355 11.1628 26.9767 11.1628C31.0868 11.1628 34.4186 14.4946 34.4186 18.6047C34.4186 19.9675 34.0522 21.2448 33.4126 22.3435C35.542 22.5399 37.2093 24.331 37.2093 26.5116C37.2093 28.8235 35.3351 30.6977 33.0233 30.6977C32.866 30.6977 32.7108 30.689 32.5581 30.6721V30.6977H8.83721H8.37209V30.6801C5.25002 30.4426 2.7907 27.8341 2.7907 24.6512C2.7907 22.0985 4.37252 19.9153 6.60943 19.0283C6.54499 18.5863 6.51162 18.1343 6.51162 17.6744C6.51162 12.5369 10.6764 8.3721 15.8139 8.3721C18.8777 8.3721 21.5955 9.85322 23.2904 12.1385ZM22.1761 16.0029C21.9795 16.33 21.8755 16.7056 21.8754 17.0886C21.8752 17.5207 22.0073 17.9422 22.2536 18.2951C22.4998 18.648 22.848 18.9149 23.2502 19.059V19.642C23.2502 19.8883 23.1537 20.1245 22.9817 20.2986C22.8098 20.4727 22.5767 20.5705 22.3336 20.5705H18.6673C18.3518 20.5701 18.0397 20.6359 17.7506 20.7636V19.059C18.2093 18.8946 18.5959 18.5714 18.842 18.1463C19.0882 17.7212 19.1781 17.2217 19.0958 16.7359C19.0136 16.2502 18.7645 15.8096 18.3925 15.4919C18.0206 15.1742 17.5497 15 17.0632 15C16.5768 15 16.1059 15.1742 15.7339 15.4919C15.362 15.8096 15.1128 16.2502 15.0306 16.7359C14.9483 17.2217 15.0382 17.7212 15.2844 18.1463C15.5305 18.5714 15.9171 18.8946 16.3758 19.059V23.9392C15.9169 24.1035 15.53 24.4268 15.2837 24.8521C15.0373 25.2774 14.9474 25.7772 15.0297 26.2631C15.112 26.7491 15.3612 27.19 15.7333 27.5078C16.1054 27.8257 16.5764 28 17.0632 28C17.5499 28 18.021 27.8257 18.3931 27.5078C18.7652 27.19 19.0145 26.7491 19.0968 26.2631C19.1791 25.7772 19.0891 25.2774 18.8428 24.8521C18.5964 24.4268 18.2095 24.1035 17.7506 23.9392V22.8918C17.7506 22.6456 17.8472 22.4094 18.0191 22.2353C18.191 22.0612 18.4242 21.9634 18.6673 21.9634H22.3336C22.9414 21.9634 23.5242 21.7187 23.9539 21.2834C24.3837 20.8481 24.6251 20.2577 24.6251 19.642V19.059C24.9815 18.9312 25.2964 18.7067 25.5355 18.41C25.7745 18.1133 25.9285 17.7557 25.9804 17.3764C26.0324 16.997 25.9804 16.6105 25.8302 16.2591C25.6799 15.9076 25.4372 15.6047 25.1286 15.3836C24.8199 15.1624 24.4572 15.0315 24.0801 15.0051C23.7029 14.9786 23.3257 15.0577 22.99 15.2337C22.6542 15.4097 22.3727 15.6757 22.1761 16.0029ZM16.5771 17.581C16.4482 17.4504 16.3758 17.2732 16.3758 17.0886C16.3758 16.9039 16.4482 16.7267 16.5771 16.5961C16.706 16.4655 16.8809 16.3922 17.0632 16.3922C17.2455 16.3922 17.4204 16.4655 17.5493 16.5961C17.6783 16.7267 17.7506 16.9039 17.7506 17.0886C17.7506 17.2732 17.6783 17.4504 17.5493 17.581C17.4204 17.7116 17.2455 17.785 17.0632 17.785C16.8809 17.785 16.706 17.7116 16.5771 17.581ZM23.4516 16.5961C23.5805 16.4655 23.7553 16.3922 23.9377 16.3922C24.12 16.3922 24.2949 16.4655 24.4238 16.5961C24.5526 16.7267 24.6251 16.9039 24.6251 17.0886C24.6251 17.2732 24.5526 17.4504 24.4238 17.581C24.2949 17.7116 24.12 17.785 23.9377 17.785C23.7553 17.785 23.5805 17.7116 23.4516 17.581C23.3226 17.4504 23.2502 17.2732 23.2502 17.0886C23.2502 16.9039 23.3226 16.7267 23.4516 16.5961ZM16.5771 25.4171C16.706 25.2865 16.8809 25.2132 17.0632 25.2132C17.2455 25.2132 17.4204 25.2865 17.5493 25.4171C17.6783 25.5477 17.7506 25.7248 17.7506 25.9096C17.7506 26.0942 17.6783 26.2713 17.5493 26.4019C17.4204 26.5325 17.2455 26.6059 17.0632 26.6059C16.8809 26.6059 16.706 26.5325 16.5771 26.4019C16.4482 26.2713 16.3758 26.0942 16.3758 25.9096C16.3758 25.7248 16.4482 25.5477 16.5771 25.4171Z" fill="white"/>
           </svg>
-          <h1>cloudbranch</h1>
+          <h1>CloudBranch</h1>
         </div> 
           <nav>
             <ul>
@@ -36,7 +43,7 @@
         <div>
           <h1 class="xl">Docs</h1>
           <p class="lead">
-            Learn how to work with the cloudbranch platform
+            Learn how to work with the CloudBranch platform
           </p>
         </div>
         <img src="images/docs-icon.svg" alt="">
@@ -51,7 +58,7 @@
           <h4 class="my-2">Essentials</h4>
           <ul>
             <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#about">About cloudbranch</a></li>
+            <li><a href="#about">About CloudBranch</a></li>
             <li><a href="#installation">Installation</a></li>
           </ul>
           <h4 class="my-2">Deployment</h4>
@@ -67,11 +74,11 @@
         <h2 class="md">Essentials</h2>
         <section id="introduction">
           <h3>Introduction</h3>
-          <p>Welcome to the cloudbranch hosting documentation. This guide provides a comprehensive resource for deploying and managing your web applications with ease. Explore our platform's powerful features and get started on your journey to successful hosting.</p>
+          <p>Welcome to the CloudBranch hosting documentation. This guide provides a comprehensive resource for deploying and managing your web applications with ease. Explore our platform's powerful features and get started on your journey to successful hosting.</p>
         </section>
         <div class="alert alert-success">
           <i class="fas fa-info"></i>
-          <p>Cloudbranch is a demo website built by <a href="#" class="text-primary">Evergreen Web Designs</a>. This is not a real cloud hosting platform.</p>
+          <p>CloudBranch is a demo website built by <a href="#" class="text-primary">Evergreen Web Designs</a>. This is not a real cloud hosting platform.</p>
         </div>
         <h3>Requirements</h3>
         <ul>
@@ -79,12 +86,12 @@
           <li>Node.js v12 or higher</li>
         </ul>
         <section id="about">
-          <h3>About Cloudbranch</h3>
-          <p>Discover the story behind cloudbranch hosting. Our commitment to innovation and reliability drives us to provide cutting-edge cloud solutions tailored to your needs. Learn about our mission to bridge technology and user experience, and explore how cloudbranch has evolved into a trusted hosting partner for businesses worldwide.</p>
+          <h3>About CloudBranch</h3>
+          <p>Discover the story behind CloudBranch hosting. Our commitment to innovation and reliability drives us to provide cutting-edge cloud solutions tailored to your needs. Learn about our mission to bridge technology and user experience, and explore how CloudBranch has evolved into a trusted hosting partner for businesses worldwide.</p>
         </section>
         <section id="installation">
           <h3>Installation</h3>
-          <p>Dive into the step-by-step installation guide to set up cloudbranch hosting for your projects. Our detailed instructions ensure a seamless setup process, whether you're a developer or a non-technical user. From creating an account to configuring your first instance, this section will help you get your web applications up and running quickly and efficiently.</p>
+          <p>Dive into the step-by-step installation guide to set up CloudBranch hosting for your projects. Our detailed instructions ensure a seamless setup process, whether you're a developer or a non-technical user. From creating an account to configuring your first instance, this section will help you get your web applications up and running quickly and efficiently.</p>
           <p>Mac (Homebrew)</p>
           <pre><code>$ brew install cloudbranch-cli</code></pre>
           <p>NPM</p>
@@ -94,19 +101,19 @@
         </section>
         <section id="getting-started">
           <h3>Getting Started</h3>
-          <p>Welcome to the world of cloudbranch hosting! In this section, we'll guide you through your first deployment. From uploading your application files to accessing your control panel, you'll gain hands-on experience with the platform. Start your journey towards successful hosting and discover how cloudbranch can elevate your online presence.</p>
+          <p>Welcome to the world of CloudBranch hosting! In this section, we'll guide you through your first deployment. From uploading your application files to accessing your control panel, you'll gain hands-on experience with the platform. Start your journey towards successful hosting and discover how CloudBranch can elevate your online presence.</p>
         </section>
         <section id="configuring-settings">
           <h3>Configuring Settings</h3>
-          <p>Customize your hosting environment to suit your specific needs. This section provides insights into configuring various settings, from optimizing performance to managing security options. Whether you're fine-tuning your resource allocation or setting up automated backups, you'll have the tools to tailor cloudbranch hosting to your requirements.</p>
+          <p>Customize your hosting environment to suit your specific needs. This section provides insights into configuring various settings, from optimizing performance to managing security options. Whether you're fine-tuning your resource allocation or setting up automated backups, you'll have the tools to tailor CloudBranch hosting to your requirements.</p>
         </section>
         <section id="managing-domains">
           <h3>Managing Domains</h3>
-          <p>Learn how to manage domains seamlessly within cloudbranch hosting. Whether you're adding new domains, configuring DNS settings, or setting up subdomains, this section covers all aspects of domain management. Ensure a smooth user experience for your visitors by following our guidelines for domain-related tasks.</p>
+          <p>Learn how to manage domains seamlessly within CloudBranch hosting. Whether you're adding new domains, configuring DNS settings, or setting up subdomains, this section covers all aspects of domain management. Ensure a smooth user experience for your visitors by following our guidelines for domain-related tasks.</p>
         </section>
         <section id="scaling-resources">
           <h3>Scaling Resources</h3>
-          <p>As your web application grows, so should your hosting resources. Discover strategies for scaling your resources on cloudbranch to accommodate increased traffic and demand. From adjusting server capacity to optimizing load balancing, this section equips you with the knowledge to ensure your application's performance remains top-notch as your audience expands.</p>
+          <p>As your web application grows, so should your hosting resources. Discover strategies for scaling your resources on CloudBranch to accommodate increased traffic and demand. From adjusting server capacity to optimizing load balancing, this section equips you with the knowledge to ensure your application's performance remains top-notch as your audience expands.</p>
         </section>
       </div>
     </div>
@@ -117,10 +124,10 @@
     <div class="container grid grid-3">
       <div>
         <div class="logo-container flex">
-          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="cloudbranch-icon">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="CloudBranch-icon">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M23.2904 12.1385C24.3772 11.5176 25.6355 11.1628 26.9767 11.1628C31.0868 11.1628 34.4186 14.4946 34.4186 18.6047C34.4186 19.9675 34.0522 21.2448 33.4126 22.3435C35.542 22.5399 37.2093 24.331 37.2093 26.5116C37.2093 28.8235 35.3351 30.6977 33.0233 30.6977C32.866 30.6977 32.7108 30.689 32.5581 30.6721V30.6977H8.83721H8.37209V30.6801C5.25002 30.4426 2.7907 27.8341 2.7907 24.6512C2.7907 22.0985 4.37252 19.9153 6.60943 19.0283C6.54499 18.5863 6.51162 18.1343 6.51162 17.6744C6.51162 12.5369 10.6764 8.3721 15.8139 8.3721C18.8777 8.3721 21.5955 9.85322 23.2904 12.1385ZM22.1761 16.0029C21.9795 16.33 21.8755 16.7056 21.8754 17.0886C21.8752 17.5207 22.0073 17.9422 22.2536 18.2951C22.4998 18.648 22.848 18.9149 23.2502 19.059V19.642C23.2502 19.8883 23.1537 20.1245 22.9817 20.2986C22.8098 20.4727 22.5767 20.5705 22.3336 20.5705H18.6673C18.3518 20.5701 18.0397 20.6359 17.7506 20.7636V19.059C18.2093 18.8946 18.5959 18.5714 18.842 18.1463C19.0882 17.7212 19.1781 17.2217 19.0958 16.7359C19.0136 16.2502 18.7645 15.8096 18.3925 15.4919C18.0206 15.1742 17.5497 15 17.0632 15C16.5768 15 16.1059 15.1742 15.7339 15.4919C15.362 15.8096 15.1128 16.2502 15.0306 16.7359C14.9483 17.2217 15.0382 17.7212 15.2844 18.1463C15.5305 18.5714 15.9171 18.8946 16.3758 19.059V23.9392C15.9169 24.1035 15.53 24.4268 15.2837 24.8521C15.0373 25.2774 14.9474 25.7772 15.0297 26.2631C15.112 26.7491 15.3612 27.19 15.7333 27.5078C16.1054 27.8257 16.5764 28 17.0632 28C17.5499 28 18.021 27.8257 18.3931 27.5078C18.7652 27.19 19.0145 26.7491 19.0968 26.2631C19.1791 25.7772 19.0891 25.2774 18.8428 24.8521C18.5964 24.4268 18.2095 24.1035 17.7506 23.9392V22.8918C17.7506 22.6456 17.8472 22.4094 18.0191 22.2353C18.191 22.0612 18.4242 21.9634 18.6673 21.9634H22.3336C22.9414 21.9634 23.5242 21.7187 23.9539 21.2834C24.3837 20.8481 24.6251 20.2577 24.6251 19.642V19.059C24.9815 18.9312 25.2964 18.7067 25.5355 18.41C25.7745 18.1133 25.9285 17.7557 25.9804 17.3764C26.0324 16.997 25.9804 16.6105 25.8302 16.2591C25.6799 15.9076 25.4372 15.6047 25.1286 15.3836C24.8199 15.1624 24.4572 15.0315 24.0801 15.0051C23.7029 14.9786 23.3257 15.0577 22.99 15.2337C22.6542 15.4097 22.3727 15.6757 22.1761 16.0029ZM16.5771 17.581C16.4482 17.4504 16.3758 17.2732 16.3758 17.0886C16.3758 16.9039 16.4482 16.7267 16.5771 16.5961C16.706 16.4655 16.8809 16.3922 17.0632 16.3922C17.2455 16.3922 17.4204 16.4655 17.5493 16.5961C17.6783 16.7267 17.7506 16.9039 17.7506 17.0886C17.7506 17.2732 17.6783 17.4504 17.5493 17.581C17.4204 17.7116 17.2455 17.785 17.0632 17.785C16.8809 17.785 16.706 17.7116 16.5771 17.581ZM23.4516 16.5961C23.5805 16.4655 23.7553 16.3922 23.9377 16.3922C24.12 16.3922 24.2949 16.4655 24.4238 16.5961C24.5526 16.7267 24.6251 16.9039 24.6251 17.0886C24.6251 17.2732 24.5526 17.4504 24.4238 17.581C24.2949 17.7116 24.12 17.785 23.9377 17.785C23.7553 17.785 23.5805 17.7116 23.4516 17.581C23.3226 17.4504 23.2502 17.2732 23.2502 17.0886C23.2502 16.9039 23.3226 16.7267 23.4516 16.5961ZM16.5771 25.4171C16.706 25.2865 16.8809 25.2132 17.0632 25.2132C17.2455 25.2132 17.4204 25.2865 17.5493 25.4171C17.6783 25.5477 17.7506 25.7248 17.7506 25.9096C17.7506 26.0942 17.6783 26.2713 17.5493 26.4019C17.4204 26.5325 17.2455 26.6059 17.0632 26.6059C16.8809 26.6059 16.706 26.5325 16.5771 26.4019C16.4482 26.2713 16.3758 26.0942 16.3758 25.9096C16.3758 25.7248 16.4482 25.5477 16.5771 25.4171Z" fill="white"/>
           </svg>
-          <h1>cloudbranch</h1>
+          <h1>CloudBranch</h1>
         </div> 
         <p>Copyright &copy; 2023</p>
       </div>
